--- a/client/src/app/components/login-page/login-page.component.html
+++ b/client/src/app/components/login-page/login-page.component.html
@@ -25,8 +25,21 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <a class="btn btn-lg btn-success btn-block" [routerLink]="['/registration']">Sign up</a>
-    <p class="mt-5 mb-3 text-muted">© 2018-2019</p>
-  </form>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Sign in</button>
+    <a [routerLink]="['/registration']" class="btn btn-lg btn-success btn-block">Sign up</a>
+   </form>
 </div>
+
+<ng-template #loginPopUp>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Error</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <h5>{{loginErrorMsg}}</h5>
+  </div>
+</ng-template>
+
+
