--- a/client/src/app/components/registration-page/registration-page.component.html
+++ b/client/src/app/components/registration-page/registration-page.component.html
@@ -20,7 +20,18 @@
       <input type="password" id="password" class="form-control" formControlName="password" placeholder="password">
     </div>
 
-    <button class="btn btn-lg btn-success btn-block" type="submit">Sign up</button>
+    <button class="btn btn-lg btn-success btn-block" type="submit" [disabled]="!registrationForm.valid">Sign up</button>
     <p class="mt-5 mb-3 text-muted">© 2018-2019</p>
   </form>
 </div>
+<ng-template #registrationPopUp>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Registration message</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <h5>{{registrationErrorMessage}}</h5>
+  </div>
+</ng-template>
